<resources>
    <string name="app_name">WakeupBuddy</string>

    <string name="illustration_img">Illustration Image</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_lglogin">Login with LG account</string>
    <string name="login_title">Log into your account</string>
    <string name="signup_title">Create an account</string>
    <string name="hint_email">Enter your email or username</string>
    <string name="signup_email">Enter your email</string>
    <string name="signup_username">Enter your username</string>
    <string name="hint_name">Enter your name</string>
    <string name="login_password">Enter your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>

    <string name="login_havent_acc">
        Don\'t have an account? <font color="#00C9B8"><b>Sign Up</b></font>
    </string>
    <string name="signup_confirm_password">Confirm password</string>

    <string name="signup_have_acc">
        An existing user? <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="btn_logout">Logout</string>
    <string name="home_title">Wake Up Buddy</string>
    <string name="home_subtitle">That\'s the add alarm screen </string>
    <string name="home_greeting">Hello user!</string>
    <string name="add_button">+</string>
    <string name="home_alarm_list_title">My Alarms</string>
    <string name="set_alarm_title">Set Time</string>


</resources>