<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_alarm"
    android:background="@color/background">

<!--    <TextView-->
<!--        android:id="@+id/home_title"-->
<!--        style="@style/Title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/home_title"-->
<!--        android:textAlignment="center"-->
<!--        android:layout_gravity="center"/>-->

<!--    <TextView-->
<!--        android:id="@+id/home_subtitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/home_subtitle"-->
<!--        android:layout_marginTop="40sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textAlignment="center"-->
<!--        style="@style/SubTitle"-->
<!--       android:layout_gravity="center" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        style="@style/ButtonBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:layout_gravity="center"/>

<!--    <TimePicker-->
<!--        android:id="@+id/time_picker"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginTop="75sp"-->
<!--        android:timePickerMode="spinner" />-->

    <TextView
        android:id="@+id/home_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_greeting"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        style="@style/Title"
        android:layout_gravity="center_horizontal" />

    <AnalogClock
        android:id="@+id/home_analog_clock"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100sp" />

    <TextView
        android:id="@+id/home_alarm_list_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/add_button" />

    <ListView
        android:id="@+id/alarm_list"
        android:layout_gravity="center"
        android:layout_width="350sp"
        android:layout_height="250sp"
        android:layout_marginTop="200sp"/>


</FrameLayout>